[package]
name = "templet-cli-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4" }
hmac = "0.12.1"
jwt = "0.16.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = "1.0.197"
serde_json = "1.0.114"
sha2 = "0.10.8"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
